--- a/index.html
+++ b/index.html
@@ -48,6 +48,25 @@
                         <li><a class="dropdown-item" href="#">Mais ...</a></li>
                     </ul>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                       data-bs-toggle="dropdown" aria-expanded="false">
+                        Exemplos
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="botoes.html">Tela de Login</a></li>
+                        <li><a class="dropdown-item" href="formularios.html">Tela de Cadastro</a></li>
+                        <li><a class="dropdown-item" href="tabelas.html">Tela de exibição de dados</a></li>
+                        <li><a class="dropdown-item" href="carroussel.html">WebPage</a></li>
+                        <li><a class="dropdown-item" href="carroussel.html">Dashboard</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item" href="#">Mais ...</a></li>
+                    </ul>
+                </li>
+            </ul>
+
 
             </ul>
             <form class="d-flex">
@@ -93,6 +112,9 @@
         informações completo. Nesse site hospedado no github vou inserir alguns componentes pensando na maior
         possibilidade de aplicaçõe spossíveis. </p>
 </main>
+
+<a href="css-grid-page.html">CSS GRID SIMPLES</a>
+<a href="wildbeast/origamid-grid.html">WildBeast</a>
 
 </body>
 </html>
